--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=lab10
+
+server.port=8082
+spring.datasource.url=jdbc:mysql://localhost/bd_lab10?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.show-sql=false
